CartsApp-Demo/deploy/kubernetes/manifests/11-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: sock-shop  
spec:
  rules:
  - host: eapp.mpkube.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: front-end-clusterip-svc
            port:
              number: 80
        pathType: Prefix
  tls:
  - hosts:
    - eapp.mpkube.com
    secretName: eapp-mpkube-secret
